added project Drum beats

--- a/index.html
+++ b/index.html
@@ -78,6 +78,14 @@
                         <p>A fun and interactive dice rolling game developed using HTML, CSS, and JavaScript.</p>
                         <a href="./diceGame/index.html" class="project-link">Explore Project</a>
                     </div>
+                    <div class="project-card">
+                        <div class="project-card-header">
+                            <h3>Drum Beats</h3>
+                            <div class="project-year">2024</div>
+                        </div>
+                        <p>A small project that uses basic HTML, CSS  ,JavaScript , here i have used the switch function of javascript to add event listners to each of them for different sounds.</p>
+                        <a href="./DholBajao/index.html" class="project-link">Explore Project</a>
+                    </div>
 
                     <!-- Add more project cards as needed -->
                 </div>
