updated the footer

--- a/DholBajao/index.html
+++ b/DholBajao/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Drum Kit</title>
+  <link rel="stylesheet" href="../styles.css">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
 </head>
@@ -22,9 +23,25 @@
   </div>
 
 
-  <footer>
-    Made with ❤️ in Ayodhya.
-  </footer>
+<!-- Footer Section -->
+<footer class="footer-section">
+  <div class="footer-content">
+      <p class="footer-text">Made by Ram Bhakt - Adarsh</p>
+      <div class="footer-vedic">
+          <p class="vedic-verse">
+              वंशीविभूषितकरान्नवनीरदाभात् पीताम्बरादरुणबिम्बफलाधरोष्ठात्। पूर्णन्दुसुन्दरमुखादरविन्दनेत्रात् कृष्णात्परं किमपि तत्वमहं न जाने।।
+          </p>
+          <div class="shloka-underline"></div>
+          <div class="carousel">
+              <div class="carousel-content">
+                  <p>जिनके हाथ बाँसुरी से सुसज्जित है, जिनकी त्वचा नए बादल की भांति चमकती हों। जो पीत वस्त्र धारण करते हों, 
+                      जिनके अधर बिम्बा पुष्प की भांति लाल हैं। जिनके मुख चंद्रमा के समान हैं, जिनके कमाल समान नेत्र हैं,
+                       उस कृष्ण के अतिरिक्त मैं और कुछ नहीं जानता।।</p>
+              </div>
+          </div>
+      </div>
+  </div>
+</footer>
   <script src="index.js"></script>
 </body>
 
