added QR CODE Generator

--- a/index.html
+++ b/index.html
@@ -68,12 +68,23 @@
             <!-- Projects Section -->
             <section id="projects" class="projects-section">
                 <h2>Micro Projects</h2>
+                
                 <div class="project-grid">
-                    <!-- Project Card Example -->
+                    <div class="project-card">
+                        <div class="project-card-header">
+                            <h3>QR Code Generator</h3>
+                            <div class="project-year">Sept-2024</div>
+                        </div>
+                        <p>I created a QR Code Generator tool using HTML, CSS, and JavaScript 
+                            that allows you to effortlessly generate and download personalized 
+                            QR codes. The tool has input validation and an attractive UI,
+                             which make the user experience seamless and entertaining.</p>
+                        <a href="./QRCode/index.html" class="project-link">Explore Project</a>
+                    </div>
                     <div class="project-card">
                         <div class="project-card-header">
                             <h3>Dice Game</h3>
-                            <div class="project-year">2024</div>
+                            <div class="project-year">Sept-2024</div>
                         </div>
                         <p>A fun and interactive dice rolling game developed using HTML, CSS, and JavaScript.</p>
                         <a href="./diceGame/index.html" class="project-link">Explore Project</a>
@@ -81,7 +92,7 @@
                     <div class="project-card">
                         <div class="project-card-header">
                             <h3>Drum Beats</h3>
-                            <div class="project-year">2024</div>
+                            <div class="project-year">Sept-2024</div>
                         </div>
                         <p>A small project that uses basic HTML, CSS  ,JavaScript , here i have used the switch function of javascript to add event listners to each of them for different sounds.</p>
                         <a href="./DholBajao/index.html" class="project-link">Explore Project</a>
